--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 alembic==1.5.8
+certifi==2022.5.18.1
+chardet==3.0.4
+charset-normalizer==2.0.12
 click==7.1.2
+colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.2
 Flask==1.1.2
@@ -11,20 +15,23 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 greenlet==1.0.0
 gunicorn==20.1.0
-idna==3.1
+idna==2.7
 importlib-metadata==3.10.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
 marshmallow==3.11.1
+marvel==0.1.0
 psycopg2==2.8.6
 python-dateutil==2.8.1
 python-dotenv==0.17.0
 python-editor==1.0.4
+requests==2.20.0
 six==1.15.0
 SQLAlchemy==1.4.7
 typing-extensions==3.7.4.3
+urllib3==1.24.3
 Werkzeug==1.0.1
 WTForms==2.3.3
 zipp==3.4.1
