prepare for hosting

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.5.8
 certifi==2022.5.18.1
+cffi==1.15.0
 chardet==3.0.4
 charset-normalizer==2.0.12
 click==7.1.2
 colorama==0.4.4
+cors==1.0.1
 dnspython==2.1.0
 email-validator==1.1.2
+filelock==3.7.1
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
@@ -13,7 +16,9 @@ flask-marshmallow==0.14.0
 Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
-greenlet==1.0.0
+future==0.18.2
+gevent==21.12.0
+greenlet==1.1.2
 gunicorn==20.1.0
 idna==2.7
 importlib-metadata==3.10.1
@@ -24,14 +29,20 @@ MarkupSafe==1.1.1
 marshmallow==3.11.1
 marvel==0.1.0
 psycopg2==2.8.6
+pycparser==2.21
+PySocks==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.17.0
 python-editor==1.0.4
 requests==2.20.0
+requests-file==1.5.1
 six==1.15.0
 SQLAlchemy==1.4.7
+tldextract==3.3.0
 typing-extensions==3.7.4.3
 urllib3==1.24.3
 Werkzeug==1.0.1
 WTForms==2.3.3
 zipp==3.4.1
+zope.event==4.5.0
+zope.interface==5.4.0
